datenbank initialisierungs skript
